complete fighters unit tests

--- a/Fighters/Fighters/Fighters.csproj
+++ b/Fighters/Fighters/Fighters.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Compile Remove="Models\IFighter.cs" />
+    <InternalsVisibleTo Include="Fighters.Tests" />
   </ItemGroup>
 
 </Project>
